preserve asserts in generated class if asserts are enabled Optimiser for schema part pins use Optimiser in SwitchPin.